# Ouri

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: schedule.yaml  thresholds.yaml
data/: history.json
data/fixtures/: bad_night.json  bedtime_winddown.json  elevated_temp.json  goal_nearly_met.json  good_day.json  great_night.json  proud_workout.json  recovering.json  rest_mode.json  sedentary_day.json  stressful_day.json
docs/: index.html
docs/css/: styles.css
docs/js/: ouri.js
src/ouri/: __init__.py  app.py  config.py
src/ouri/api/: __init__.py  cache.py  client.py  fixtures.py  history.py  oauth.py  sync.py
src/ouri/display/: __init__.py  emulator.py  face.py  hardware.py  heartrate.py  message.py  protocol.py  sleep_recap.py  tiny_font.py  trends.py
src/ouri/engine/: __init__.py  rules.py
src/ouri/input/: __init__.py  gpio_touch.py  keyboard.py  protocol.py
src/ouri/persona/: __init__.py  day_state.py  fsm.py  notifications.py  scheduler.py
src/ouri/scripts/: __init__.py  auth.py  day_runner.py  scenario_runner.py
src/ouri/wellness/: __init__.py  models.py  trends.py
tests/: test_client.py  test_engine.py  test_fixtures.py  test_heartrate.py  test_notifications.py  test_persona.py  test_scheduler.py  test_sleep_recap.py  test_trends.py
