[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouri"
version = "0.1.0"
description = "Your personal Oura wellness desk buddy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "eval-type-backport>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "luma.oled>=3.13.0",
    "luma.emulator>=1.6.0",
    "pillow>=10.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ouri = "ouri.app:main"
ouri-auth = "ouri.scripts.auth:main"
ouri-scenarios = "ouri.scripts.scenario_runner:main"
ouri-day = "ouri.scripts.day_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ouri"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
